[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/enemy_horse2.gd" type="Script" id=1]
[ext_resource path="res://data/images/horses/mobhorse/ehorse1.png" type="Texture" id=2]
[ext_resource path="res://data/images/horses/mobhorse/ehorse2.png" type="Texture" id=3]
[ext_resource path="res://data/images/horses/mobhorse/ehorse3.png" type="Texture" id=4]
[ext_resource path="res://data/images/horses/mobhorse/ehorse4.png" type="Texture" id=5]
[ext_resource path="res://data/images/horses/mobhorse/ehorse5.png" type="Texture" id=6]
[ext_resource path="res://data/images/horses/mobhorse/ehorse6.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemy2.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.2879
height = 100.402

[node name="enemy_horse2" type="KinematicBody2D" groups=["horses"]]
pause_mode = 1
position = Vector2( 458.742, 284.128 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="animation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="enemy2" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.0209656, -1.30569 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="collision" type="Area2D" parent="."]
position = Vector2( 0, 2.53716 )
scale = Vector2( 1, 2.19761 )

[node name="collide_rect" type="CollisionShape2D" parent="collision"]
position = Vector2( 0, 1.12068 )
scale = Vector2( 1, 0.455039 )
shape = SubResource( 1 )

[node name="gallop" type="Node" parent="."]

[node name="sample_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="gallop_spread" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="collision" to="." method="_on_collision_body_enter"]
[connection signal="body_exited" from="collision" to="." method="_on_collision_body_exit"]
